feat: added image

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta property="og:url" content="https://cristiantela.github.io/lula2turno/">
     <meta property="og:title" content="Lula 2º Turno — Gerar flyer de apoio ao Lula com seu nome">
     <meta property="og:description" content="Gere seu flyer personalizado com seu nome de apoio ao Lula para o segundo turno das eleições brasileira.">
-    <meta property="og:image" content="metadata.png">
+    <meta property="og:image" content="https://cristiantela.github.io/lula2turno/metadata.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://cristiantela.github.io/lula2turno/">
     <meta property="twitter:title" content="Lula 2º Turno — Gerar flyer de apoio ao Lula com seu nome">
     <meta property="twitter:description" content="Gere seu flyer personalizado com seu nome de apoio ao Lula para o segundo turno das eleições brasileira.">
-    <meta property="twitter:image" content="metadata.png">
+    <meta property="twitter:image" content="https://cristiantela.github.io/lula2turno/metadata.png">
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
