fix: fixed copy function

--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
 
       gtag("config", "G-XG904CQWTP");
     </script>
+    <script src="js/clipboardtext.js"></script>
   </head>
   <body>
     <div class="container">
@@ -217,8 +218,15 @@
         trabalhar, pois meu celular quebrou. Doe o valor que puder para me
         ajudar através da chave pix
         <input class="email" value="mathues@email.com" />
-        <img class="copy" src="img/copy.svg" alt="Copiar" title="Copiar" /> ou
-        por
+        <img
+          data-copy="mathues@email.com"
+          data-done="copy sucessful"
+          class="copy"
+          src="img/copy.svg"
+          alt="Copiar"
+          title="Copiar"
+        />
+        ou por
         <a href="https://nubank.com.br/pagar/199pu6/OH6ITDqcpU" target="_blank">
           este link do Nubank
           <img src="img/nubank-logo.svg" class="nubank" />
