--- a/index.html
+++ b/index.html
@@ -1,505 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Primary Meta Tags -->
-    <title>Lula 2º Turno — Gerar flyer de apoio ao Lula com seu nome</title>
-    <meta
-      name="title"
-      content="Lula 2º Turno — Gerar flyer de apoio ao Lula com seu nome"
-    />
-    <meta
-      name="description"
-      content="Gere seu flyer personalizado com seu nome de apoio ao Lula para o segundo turno das eleições brasileira."
-    />
+<html lang="pt-br">
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://cristiantela.github.io/lula2turno/"
-    />
-    <meta
-      property="og:title"
-      content="Lula 2º Turno — Gerar flyer de apoio ao Lula com seu nome"
-    />
-    <meta
-      property="og:description"
-      content="Gere seu flyer personalizado com seu nome de apoio ao Lula para o segundo turno das eleições brasileira."
-    />
-    <meta
-      property="og:image"
-      itemprop="image"
-      content="https://cristiantela.github.io/lula2turno/metadata.png"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bolsonaro 2º Turno</title>
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta
-      property="twitter:url"
-      content="https://cristiantela.github.io/lula2turno/"
-    />
-    <meta
-      property="twitter:title"
-      content="Lula 2º Turno — Gerar flyer de apoio ao Lula com seu nome"
-    />
-    <meta
-      property="twitter:description"
-      content="Gere seu flyer personalizado com seu nome de apoio ao Lula para o segundo turno das eleições brasileira."
-    />
-    <meta
-      property="twitter:image"
-      content="https://cristiantela.github.io/lula2turno/metadata.png"
-    />
+  <meta name="title" content="Bolsonaro 2º Turno — Apoio ao Jair Bolsonaro com seu nome" />
+  <meta name="description"
+    content="Gere seu flyer personalizado com seu nome de apoio ao Jair Bolsonaro para o segundo turno das eleições brasileira." />
 
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lula 2° Turno</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://joaoeymard.github.io/bolsonaro2turno/" />
+  <meta property="og:title" content="Bolsonaro 2º Turno — Apoio ao Jair Bolsonaro com seu nome" />
+  <meta property="og:description"
+    content="Gere seu flyer personalizado com seu nome de apoio ao Jair Bolsonaro para o segundo turno das eleições brasileira." />
+  <meta property="og:image" itemprop="image" content="https://joaoeymard.github.io/bolsonaro2turno/metadata.png" />
 
-    <style>
-      body {
-        background-color: rgb(21, 21, 21);
-        font-size: 18px;
-        margin: 0;
-        font-family: "Open Sans", sans-serif;
-      }
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://joaoeymard.github.io/bolsonaro2turno/" />
+  <meta property="twitter:title" content="Bolsonaro 2º Turno — Apoio ao Jair Bolsonaro com seu nome" />
+  <meta property="twitter:description"
+    content="Gere seu flyer personalizado com seu nome de apoio ao Jair Bolsonaro para o segundo turno das eleições brasileira." />
+  <meta property="twitter:image" content="https://joaoeymard.github.io/bolsonaro2turno/metadata.png" />
 
-      .container {
-        width: 90%;
-        max-width: 700px;
-        margin: 0 auto;
-        text-align: center;
-      }
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans&display=swap" rel="stylesheet" />
 
-      .container input {
-        font-size: 1rem;
-        border-radius: 0.4rem;
-        padding: 0.5rem 1rem;
-        margin: 1rem 0;
-        border: 1px solid grey;
-      }
+  <link rel="stylesheet" href="./styles/style.css">
 
-      .container button {
-        font-size: 1rem;
-        border-radius: 0.4rem;
-        padding: 0.5rem 1rem;
-        margin: 1rem 0;
-        border-width: 0;
-        border-bottom: 2px solid rgb(9, 99, 37);
-        background-color: #107b29;
-        color: white;
-        cursor: pointer;
-      }
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169842087-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-      .container canvas {
-        display: block;
-        width: 80%;
-        margin: 0 auto;
-        margin-bottom: 1rem;
-      }
+    gtag('config', 'UA-169842087-3');
+  </script>
 
-      .container footer {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 1rem;
-        row-gap: 0.5rem;
-      }
+</head>
 
-      .container footer a {
-        color: #f5c012;
-        text-decoration: none;
-        column-gap: 0.25rem;
-      }
+<body>
+  <div class="container">
+    <canvas width="800" height="600"></canvas>
 
-      .container footer a {
-        display: flex;
-        align-items: center;
-      }
-
-      .container footer a img {
-        height: 1.5rem;
-      }
-
-      .container footer a img.profile {
-        border-radius: 50%;
-      }
-
-      .container smartphone {
-        display: block;
-        color: #1da60e;
-        margin: 2rem 0;
-        font-weight: bold;
-      }
-
-      .container smartphone input {
-        height: 1.75rem;
-        margin: 0;
-        padding: 0 0.5rem;
-        box-sizing: border-box;
-        font-size: 1rem;
-        border: 1px solid #f5c012;
-        background-color: transparent;
-        color: #f5c012;
-        outline: none;
-        margin-left: 0.5rem;
-      }
-
-      .container smartphone .copy {
-        height: 1.5rem;
-        cursor: pointer;
-        display: inline-block;
-        vertical-align: middle;
-        margin-right: 0.5rem;
-      }
-
-      .container smartphone a {
-        color: #f5c012;
-        text-decoration: underline;
-        text-underline-offset: 0.5rem;
-      }
-
-      .container smartphone a:hover {
-        color: #b08b10;
-        text-decoration: underline;
-        text-underline-offset: 0.5rem;
-      }
-
-      .container smartphone .nubank {
-        height: 1.5rem;
-      }
-    </style>
-
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-XG904CQWTP"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-XG904CQWTP");
-    </script>
-    <script src="js/clipboardtext.js"></script>
-  </head>
-  <body>
-    <div class="container">
-      <input type="text" />
-
-      <button>Salvar Imagem</button>
-
-      <canvas width="1080" height="1080"></canvas>
-
-      <footer>
-        <a href="https://www.instagram.com/cristianfrontend/" target="_blank">
-          <img src="img/cristiantela-profile.png" class="profile" />
-          <img src="img/instagram-logo.svg" />
-          <span><b>cristian</b>frontend</span>
-        </a>
-
-        <a href="https://github.com/cristiantela/lula2turno" target="_blank">
-          <img src="img/github-logo.svg" />
-          <span>cristiantela/lula2turno</span>
-        </a>
-      </footer>
-
-      <smartphone>
-        Olá, meu nome é Matheus Cristian, e estou precisando de um celular para
-        trabalhar, pois meu celular quebrou. Doe o valor que puder para me
-        ajudar através da chave pix
-        <input class="email" value="mathues@email.com" />
-        <img
-          data-copy="mathues@email.com"
-          data-done="copy sucessful"
-          class="copy"
-          src="img/copy.svg"
-          alt="Copiar"
-          title="Copiar"
-        />
-        ou por
-        <a href="https://nubank.com.br/pagar/199pu6/OH6ITDqcpU" target="_blank">
-          este link do Nubank
-          <img src="img/nubank-logo.svg" class="nubank" />
-        </a>
-      </smartphone>
+    <div class="form-input">
+      <input name="yourname" type="text" placeholder="Coloque seu nome aqui" />
+      <button name="share">Compartilhar</button>
+      <button name="save">Salvar</button>
     </div>
 
-    <script>
-      document.querySelector(".copy").addEventListener("click", () => {
-        const copyText = document.querySelector(".email");
-        copyText.value = "mathues@email.com";
-        copyText.select();
-        copyText.setSelectionRange(0, 99999); // For mobile devices
+    <footer>
+      <a href="https://www.instagram.com/joaoeymard/" target="_blank">
+        <img src="img/instagram-logo.svg" />
+        <span>joaoeymard</span>
+      </a>
 
-        navigator.clipboard.writeText(copyText.value);
+      <a href="https://github.com/joaoeymard/bolsonaro2turno" target="_blank">
+        <img src="img/github-logo.svg" />
+        <span>joaoeymard/bolsonaro2turno</span>
+      </a>
+    </footer>
+  </div>
 
-        alert("Chave pix copiada!");
-      });
+  <script src="./scripts/script.js"></script>
+</body>
 
-      const canvas = document.querySelector("canvas");
-      const context = canvas.getContext("2d");
-
-      const baseImage = new Image();
-      baseImage.src = "./base.png";
-
-      const names = [
-        "Jose",
-        "João",
-        "Joao",
-        "Antônio",
-        "Antonio",
-        "Francisco",
-        "Carlos",
-        "Paulo",
-        "Pedro",
-        "Lucas",
-        "Luiz",
-        "Luíz",
-        "Marcos",
-        "Luis",
-        "Luís",
-        "Gabriel",
-        "Rafael",
-        "Daniel",
-        "Marcelo",
-        "Bruno",
-        "Eduardo",
-        "Felipe",
-        "Raimundo",
-        "Rodrigo",
-        "Manoel",
-        "Mateus",
-        "André",
-        "André",
-        "Fernando",
-        "Fábio",
-        "Fabio",
-        "Leonardo",
-        "Gustavo",
-        "Guilherme",
-        "Leandro",
-        "Tiago",
-        "Ânderson",
-        "Anderson",
-        "Ricardo",
-        "Márcio",
-        "Marcio",
-        "Jorge",
-        "Sebastião",
-        "Sebastiao",
-        "Alexandre",
-        "Roberto",
-        "Édson",
-        "Edson",
-        "Diego",
-        "Vítor",
-        "Vitor",
-        "Sérgio",
-        "Sergio",
-        "Cláudio",
-        "Claudio",
-        "Matheus",
-        "Thiago",
-        "Geraldo",
-        "Adriano",
-        "Luciano",
-        "Júlio",
-        "Julio",
-        "Renato",
-        "Alex",
-        "Vinícius",
-        "Vinicius",
-        "Rogério",
-        "Rogerio",
-        "Samuel",
-        "Ronaldo",
-        "Mário",
-        "Mario",
-        "Flávio",
-        "Flavio",
-        "Ígor",
-        "Igor",
-        "Douglas",
-        "Daví",
-        "Davi",
-        "Manuel",
-        "Maria",
-        "Ana",
-        "Francisca",
-        "Antônia",
-        "Antonia",
-        "Adriana",
-        "Juliana",
-        "Márcia",
-        "Marcia",
-        "Fernanda",
-        "Patricia",
-        "Patrícia",
-        "Aline",
-        "Sandra",
-        "Camila",
-        "Amanda",
-        "Bruna",
-        "Jéssica",
-        "Jessica",
-        "Leticia",
-        "Letícia",
-        "Júlia",
-        "Julia",
-        "Luciana",
-        "Vanessa",
-        "Mariana",
-        "Gabriela",
-        "Vera",
-        "Vitória",
-        "Vitoria",
-        "Larissa",
-        "Cláudia",
-        "Claudia",
-        "Beatriz",
-        "Luana",
-        "Rita",
-        "Sônia",
-        "Sonia",
-        "Renata",
-        "Eliane",
-        "Josefa",
-        "Simone",
-        "Natália",
-        "Natalia",
-        "Cristiane",
-        "Carla",
-        "Débora",
-        "Debora",
-        "Rosângela",
-        "Rosangela",
-        "Jaqueline",
-        "Rosa",
-        "Daniela",
-        "Aparecida",
-        "Marlene",
-        "Terezinha",
-        "Raimunda",
-        "Andréia",
-        "Andreia",
-        "Fabiana",
-        "Lúcia",
-        "Lucia",
-        "Raquel",
-        "Ângela",
-        "Angela",
-        "Rafaela",
-        "Joana",
-        "Luzía",
-        "Luzia",
-        "Elaine",
-        "Daniele",
-        "Regina",
-        "Dáiane",
-        "Daiane",
-        "Suelí",
-        "Sueli",
-        "Alessandra",
-        "Isabel",
-      ];
-
-      document.querySelector("input").value =
-        names[Math.floor(Math.random() * names.length)];
-
-      document.querySelector("button").addEventListener("click", () => {
-        const a = document.createElement("a");
-        a.setAttribute("href", canvas.toDataURL("image/png"));
-        a.setAttribute(
-          "download",
-          document.querySelector("input").value.trim()
-        );
-        a.click();
-      });
-
-      function roundRect(
-        ctx,
-        x,
-        y,
-        width,
-        height,
-        radius = 5,
-        fill = false,
-        stroke = true
-      ) {
-        if (typeof radius === "number") {
-          radius = { tl: radius, tr: radius, br: radius, bl: radius };
-        } else {
-          radius = { ...{ tl: 0, tr: 0, br: 0, bl: 0 }, ...radius };
-        }
-        ctx.beginPath();
-        ctx.moveTo(x + radius.tl, y);
-        ctx.lineTo(x + width - radius.tr, y);
-        ctx.quadraticCurveTo(x + width, y, x + width, y + radius.tr);
-        ctx.lineTo(x + width, y + height - radius.br);
-        ctx.quadraticCurveTo(
-          x + width,
-          y + height,
-          x + width - radius.br,
-          y + height
-        );
-        ctx.lineTo(x + radius.bl, y + height);
-        ctx.quadraticCurveTo(x, y + height, x, y + height - radius.bl);
-        ctx.lineTo(x, y + radius.tl);
-        ctx.quadraticCurveTo(x, y, x + radius.tl, y);
-        ctx.closePath();
-        ctx.fill();
-      }
-
-      baseImage.addEventListener("load", () => {
-        function draw() {
-          context.clearRect(0, 0, canvas.width, canvas.height);
-          context.drawImage(baseImage, 0, 0);
-
-          context.save();
-
-          context.translate(540, 348);
-          context.rotate((-2 * Math.PI) / 180);
-
-          context.textBaseline = "middle";
-          context.font = "196.13px Bebas Neue";
-          const width = context.measureText(
-            document.querySelector("input").value.trim()
-          ).width;
-
-          context.fillStyle = "#1ABC4C";
-          roundRect(
-            context,
-            -width / 2 - 25,
-            -184 / 2,
-            width + 25 * 2,
-            184,
-            21.66
-          );
-
-          context.fillStyle = "white";
-          context.fillText(
-            document.querySelector("input").value.trim(),
-            -width / 2,
-            20
-          );
-
-          context.restore();
-
-          setTimeout(draw, 100);
-        }
-
-        draw();
-      });
-    </script>
-  </body>
 </html>
