feat: added custom photo

--- a/photo/index.html
+++ b/photo/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <!-- Primary Meta Tags -->
-    <title>Lula 2º Turno — Gerar flyer de apoio ao Lula com seu nome</title>
+    <title>Lula 2º Turno — Gerar imagem de apoio ao Lula com sua foto</title>
     <meta
       name="title"
-      content="Lula 2º Turno — Gerar flyer de apoio ao Lula com seu nome"
+      content="Lula 2º Turno — Gerar imagem de apoio ao Lula com sua foto"
     />
     <meta
       name="description"
-      content="Gere seu flyer personalizado com seu nome de apoio ao Lula para o segundo turno das eleições brasileira"
+      content="Gere seu imagem personalizada com sua foto de apoio ao Lula para o segundo turno das eleições brasileira"
     />
 
     <!-- Open Graph / Facebook -->
@@ -20,16 +20,16 @@
     />
     <meta
       property="og:title"
-      content="Lula 2º Turno — Gerar flyer de apoio ao Lula com seu nome"
+      content="Lula 2º Turno — Gerar imagem de apoio ao Lula com sua foto"
     />
     <meta
       property="og:description"
-      content="Gere seu flyer personalizado com seu nome de apoio ao Lula para o segundo turno das eleições brasileira"
+      content="Gere seu imagem personalizada com sua foto de apoio ao Lula para o segundo turno das eleições brasileira"
     />
     <meta
       property="og:image"
       itemprop="image"
-      content="https://cristiantela.github.io/lula2turno/metadata.png"
+      content="https://cristiantela.github.io/lula2turno/photo/metadata.png"
     />
 
     <!-- Twitter -->
@@ -40,15 +40,15 @@
     />
     <meta
       property="twitter:title"
-      content="Lula 2º Turno — Gerar flyer de apoio ao Lula com seu nome"
+      content="Lula 2º Turno — Gerar imagem de apoio ao Lula com sua foto"
     />
     <meta
       property="twitter:description"
-      content="Gere seu flyer personalizado com seu nome de apoio ao Lula para o segundo turno das eleições brasileira"
+      content="Gere seu imagem personalizada com sua foto de apoio ao Lula para o segundo turno das eleições brasileira"
     />
     <meta
       property="twitter:image"
-      content="https://cristiantela.github.io/lula2turno/metadata.png"
+      content="https://cristiantela.github.io/lula2turno/photo/metadata.png"
     />
 
     <meta charset="UTF-8" />
@@ -190,11 +190,11 @@
 
       gtag("config", "G-XG904CQWTP");
     </script>
-    <script src="js/clipboardtext.js"></script>
+    <script src="../js/clipboardtext.js"></script>
   </head>
   <body>
     <div class="container">
-      <input type="text" />
+      <input type="file" />
 
       <button>Salvar Imagem</button>
 
@@ -202,13 +202,13 @@
 
       <footer>
         <a href="https://www.instagram.com/cristianfrontend/" target="_blank">
-          <img src="img/cristiantela-profile.png" class="profile" />
-          <img src="img/instagram-logo.svg" />
+          <img src="../img/cristiantela-profile.png" class="profile" />
+          <img src="../img/instagram-logo.svg" />
           <span><b>cristian</b>frontend</span>
         </a>
 
         <a href="https://github.com/cristiantela/lula2turno" target="_blank">
-          <img src="img/github-logo.svg" />
+          <img src="../img/github-logo.svg" />
           <span>cristiantela/lula2turno</span>
         </a>
       </footer>
@@ -222,14 +222,14 @@
           data-copy="mathues@email.com"
           data-done="copy sucessful"
           class="copy"
-          src="img/copy.svg"
+          src="../img/copy.svg"
           alt="Copiar"
           title="Copiar"
         />
         ou por
         <a href="https://nubank.com.br/pagar/199pu6/OH6ITDqcpU" target="_blank">
           este link do Nubank
-          <img src="img/nubank-logo.svg" class="nubank" />
+          <img src="../img/nubank-logo.svg" class="nubank" />
         </a>
       </smartphone>
     </div>
@@ -413,16 +413,13 @@
         "Isabel",
       ];
 
-      document.querySelector("input").value =
-        names[Math.floor(Math.random() * names.length)];
+      // document.querySelector("input").value =
+      //   names[Math.floor(Math.random() * names.length)];
 
       document.querySelector("button").addEventListener("click", () => {
         const a = document.createElement("a");
         a.setAttribute("href", canvas.toDataURL("image/png"));
-        a.setAttribute(
-          "download",
-          document.querySelector("input").value.trim()
-        );
+        a.setAttribute("download", "image");
         a.click();
       });
 
@@ -462,9 +459,9 @@
 
       baseImage.addEventListener("load", () => {
         function draw() {
-          context.clearRect(0, 0, canvas.width, canvas.height);
           context.drawImage(baseImage, 0, 0);
 
+          /*
           context.save();
 
           context.translate(540, 348);
@@ -494,11 +491,62 @@
           );
 
           context.restore();
+          */
 
-          setTimeout(draw, 100);
+          // setTimeout(draw, 100);
+
+          document
+            .querySelector('input[type="file"]')
+            .addEventListener("change", (event) => {
+              var file = event.srcElement.files[0];
+              var reader = new FileReader();
+
+              // context.drawImage();
+
+              reader.addEventListener(
+                "load",
+                function () {
+                  console.log(reader);
+                  const photo = new Image();
+                  photo.src = reader.result;
+                  photo.addEventListener("load", () => {
+                    const oldWidth = photo.width;
+                    photo.width = 1080;
+                    photo.height = (1080 / oldWidth) * photo.height;
+
+                    if (photo.height < 1080) {
+                      const oldHeight = photo.height;
+                      photo.height = 1080;
+                      photo.width = (1080 / oldHeight) * photo.width;
+                    }
+                    console.log(photo.height);
+                    context.drawImage(
+                      photo,
+                      0 - (photo.width - 1080) / 2,
+                      0 - (photo.height - 1080) / 2,
+                      photo.width,
+                      photo.height
+                    );
+                    draw();
+                  });
+                },
+                false
+              );
+
+              if (file) {
+                reader.readAsDataURL(file);
+              }
+            });
         }
 
         draw();
+
+        const image = new Image();
+        image.src = './base-2.png';
+        image.addEventListener('load', () => {
+          context.drawImage(image, 0, 0);
+          draw();
+        });
       });
     </script>
   </body>
