feat: removed unecessary note

--- a/linear/index.html
+++ b/linear/index.html
@@ -267,12 +267,7 @@
         <b>
           Companheiros e companheiras, agradeço a todos que ajudaram e doaram,
           com a ajuda de vocês consegui comprar um celular para trabalhar e sou
-          imensamente grato, saliento ainda que, esta página não tem nenhum
-          contato com o instagram @lula.turno2 (do qual possui o total direito
-          de imagem pela criação e administrado por @joaonogueraa), o que fiz,
-          foi apenas facilitar o processo de criação das tags customizados com
-          os nomes, ou seja, o desenvolvimento desta página, em prol da campanha
-          de Lula.
+          imensamente grato.
         </b>
         <br />
         24 de Outubro de 2022
