Atualizando imagem de fundo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <body>
   <div class="container">
-    <canvas width="800" height="600"></canvas>
+    <canvas width="1080" height="1080"></canvas>
 
     <div class="form-input">
       <input name="yourname" type="text" placeholder="Coloque seu nome aqui" />
@@ -68,7 +68,7 @@
     </footer>
   </div>
 
-  <script src="./scripts/script.js"></script>
+  <script src="./scripts/script.js?v=2.0"></script>
 </body>
 
 </html>
