--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
     <footer>
       <a href="https://www.instagram.com/joaoeymard/" target="_blank">
         <img src="img/instagram-logo.svg" />
-        <span>joaoeymard</span>
+        <span>Feito por: @joaoeymard</span>
+      </a>
+      <a href="https://www.instagram.com/souocleison/" target="_blank">
+        <img src="img/instagram-logo.svg" />
+        <span>Desenhado por: @souocleison</span>
       </a>
 
       <a href="https://github.com/joaoeymard/bolsonaro2turno" target="_blank">
